kubernetes/slack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack
  template:
    metadata:
      labels:
        app: slack
    spec:
      containers:
        - name: slack
          image: citrusops-slack:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
