kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citrusops-ingress
  namespace: citrusops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: citrusops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-web-app
                port:
                  number: 8001
